# hello-ffmpeg

./: CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake
hello-ffmpeg/: main.cpp
