cmake_minimum_required(VERSION 3.9)
project(hello-ffmpeg CXX)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
find_package(FFMPEG COMPONENTS avcodec REQUIRED)
set(CMAKE_CXX_STANDARD 11)
file(GLOB SOURCES ${PROJECT_NAME}/*cpp)
file(GLOB HEADERS ${PROJECT_NAME}/*.h*)
INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIRS} ${FFMPEG_LIBRARIES})
add_executable(hello-ffmpeg ${SOURCES} ${HEADERS})
target_link_libraries(${PROJECT_NAME} ${FFMPEG_LIBRARIES})
